tooling/nargo_cli/tests/snapshots/execution_success/regression_mem_op_predicate/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 5,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      },
      {
        "name": "idx",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "1534749929587795882": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _14",
    "private parameters indices : [_0, _1, _2, _3, _4, _5]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 32)] []",
    "BLACKBOX::RANGE [(_2, 32)] []",
    "BLACKBOX::RANGE [(_3, 32)] []",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "INIT (id: 0, len: 5, witnesses: [_0, _1, _2, _3, _4])",
    "BLACKBOX::RANGE [(_5, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _5) 4294967293 ], EXPR [ 4294967296 ]], outputs: [_6, _7]",
    "BLACKBOX::RANGE [(_6, 1)] []",
    "BLACKBOX::RANGE [(_7, 32)] []",
    "EXPR [ (1, _5) (-4294967296, _6) (-1, _7) 4294967293 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _5) 4294967291 ], EXPR [ 4294967296 ]], outputs: [_8, _9]",
    "BLACKBOX::RANGE [(_8, 1)] []",
    "BLACKBOX::RANGE [(_9, 32)] []",
    "EXPR [ (1, _5) (-4294967296, _8) (-1, _9) 4294967291 ]",
    "EXPR [ (1, _6, _8) (-1, _8) 0 ]",
    "EXPR [ (-1, _5, _6) (1, _5) (-1, _10) 0 ]",
    "MEM (id: 0, read at: EXPR [ (1, _10) 0 ], value: EXPR [ (1, _11) 0 ]) ",
    "INIT (id: 1, len: 5, witnesses: [_0, _1, _2, _3, _4])",
    "EXPR [ (1, _6, _11) (-10, _6) (-1, _12) 10 ]",
    "MEM (id: 1, write EXPR [ (1, _12) 0 ] at: EXPR [ (1, _10) 0 ]) ",
    "EXPR [ (-1, _13) 4 ]",
    "MEM (id: 1, read at: EXPR [ (1, _13) 0 ], value: EXPR [ (1, _14) 0 ]) ",
    "EXPR [ (1, _4, _6) (-1, _6, _14) (1, _14) -111 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient"
  ]
}
